# falcon-aadhaar

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
core/: .gitignore  Cargo.toml  compressed_snark.json  proof_possession_aggregated.proof.json
core/examples/: age_proof.rs  generate_falcon_qr.rs  generate_uidai_keys.rs  naive_incremental_pop.rs  proof_possession_aggregated.rs  proof_possession_naive.rs
core/src/: bellpepper_uint64.rs  circuit.rs  dob.rs  falcon_incremental_verify.rs  lib.rs  main.rs  qr.rs  shake256.rs  utils.rs
core/src/aadhaar/: dob.rs  falcon_bytes.rs  mod.rs  qr.rs
core/src/age_proof/: mod.rs
core/src/gadgets/: bellpepper_uint64.rs  mod.rs  ntt_mult.rs  ntt_poly_mult.rs  shake256.rs  subarray.rs
core/src/hash/: mod.rs  shake256.rs
core/src/incremental_falcon/: hashtocoeffs.rs  mod.rs
core/src/incremental_proof_of_possession/: mod.rs  naive_pop.rs
core/src/ntt/: mod.rs
core/src/proof_of_possession/: mod.rs  naive_pop.rs
core/src/proof_possession_incremental/: aggregated.rs  mod.rs  naive.rs
core/src/utils/: boolean.rs  mod.rs  mod_arith.rs  range_check.rs  selection.rs
core/tests/: test_dob.rs
dependencies/falcon-r1cs/: Cargo.toml
dependencies/falcon-r1cs/examples/: constraint_counts.rs  pok_sig.rs
dependencies/falcon-rust/: Cargo.toml
dependencies/falcon-rust/src/: lib.rs
examples/: age_proof.rs  generate_falcon_qr.rs  generate_uidai_keys.rs  proof_possession_aggregated.rs  proof_possession_naive.rs
src/: lib.rs
src/aadhaar/: dob.rs  falcon_bytes.rs  mod.rs  qr.rs
src/age_proof/: mod.rs
src/gadgets/: bellpepper_uint64.rs  subarray.rs
src/hash/: mod.rs  poseidon.rs
src/ntt/: mod.rs
src/proof_possession_incremental/: aggregated.rs  naive.rs
src/utils/: bit_encoding.rs  mod.rs  mod_arith.rs  packing.rs  range_check.rs  selection.rs
(+12 files in other folders)
