[package]
name = "falcon-aadhaar"
version = "0.1.0"
edition = "2024"

[dependencies]
falcon-rust = { path = "../dependencies/falcon-rust" }
falcon-r1cs = { path = "../dependencies/falcon-r1cs" }
nova-aadhaar-qr = { path = "../dependencies/nova-aadhaar-qr" }
bellpepper = { version = "0.4.1", default-features = false }
bellpepper-core = { version = "0.4.0", default-features = false }
bellpepper-nonnative = { git = "https://github.com/avras/bellperson-nonnative.git" }
ff = "0.13.0"
nova-snark = { git = "https://github.com/microsoft/Nova.git", default-features = false, rev = "ac8b057cd6fbc2aba7b2888a9b9c37fec9119d45" }
sha2 = { version = "0.10.8", default-features = false, features = ["compress"] }
pasta_curves = { version = "0.5.1", default-features = false }
generic-array = "1.0.0"
hex = "0.4.3"
num-bigint = "0.4.4"
neptune = { version = "13.0.0", default-features = false }
clap = "4.5.4"
image = "0.25.2"
rqrr = "0.7.1"
zlib-rs = "0.3.0"
bincode = "1.3.3"
flate2 = "1.0.34"
bitvec = "1.0.1"
rand_core = "0.10.0"
blstrs = "0.7.1"
proptest = "1.9.0"
rand_xorshift = "0.5.0"
keccak = "0.1.5"
sha3 = "0.10.8"

[features]
default = [ "falcon-512", "parallel" ]
falcon-512 = [ "falcon-rust/falcon-512" ]
falcon-1024 = [ "falcon-rust/falcon-1024" ]
parallel = [ ]
